k8s/k8s-networkpolicies/deny-access-to-ns2.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: ns2
  name: deny-access-to-ns2
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
