k8s/k8s-networkpolicies/netpol-httpd.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-httpd
spec:
  podSelector:
    matchLabels:
      run: httpd  
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
